--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
     //GSON
     implementation 'com.google.code.gson:gson:2.8.5'
     //NETWORK
