--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -51,10 +52,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
+
+    //firebase
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
 
     //recyclerview
     implementation "androidx.recyclerview:recyclerview:1.1.0"
